Updated the Tag line of website

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section class="container">
             <div class="left">
-                <h1>CLICK WHAT YOU SEE</h1>
+                <h1>CAPTURE THE LIGHT</h1>
                 <br>
                 <div class="subcon">
                     <a href="signup.html">Sign Up</a>
@@ -45,7 +45,7 @@
             </div>
         </section>
         <section class="container2">
-            <h2>Contents and Catagories</h2>
+            <h2>Contents</h2>
             <div class="first-line">
                 <div class="first" id="first1">
                     <div class="up">
