updated the index.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="/font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <title>ClickIt | Home</title>
 </head>
 <body>
@@ -16,9 +16,10 @@
             </div>
             <div class="navbar">
                 <ul>
-                    <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
-                    <a href="gallery.html"><i class="fa fa-picture-o" aria-hidden="true"></i> Gallery</a>
-                    <a href="signin.html"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign In</a>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="gallery.html">Gallery</a>
+                    <a href="signin.html">Sign In</a>
                 </ul>
             </div>
             <div class="search">
@@ -38,10 +39,10 @@
                 </div>
             </div>
             <div class="right">
-                <div id="fb"><a href="https://facebook.com"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a></div>
-                <div id="ig"><a href="facebook.com"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></div>
-                <div id="yt"><a href="facebook.com"><i class="fa fa-youtube-play" aria-hidden="true"></i> Youtube</a></div>
-                <div id="tt"><a href="facebook.com"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a></div>
+                <div id="fb"><a href="https://facebook.com"><i class="fa-brands fa-facebook"></i> Facebook</a></div>
+                <div id="ig"><a href="facebook.com"><i class="fa-brands fa-instagram"></i> Instagram</a></div>
+                <div id="yt"><a href="facebook.com"><i class="fa-brands fa-youtube"></i> Youtube</a></div>
+                <div id="tt"><a href="facebook.com"><i class="fa-brands fa-twitter"></i> Twitter</a></div>
             </div>
         </section>
         <section class="container2">
@@ -98,7 +99,6 @@
             <a href="#">Terms of Use</a>
             <a href="#">Privacy Policy</a>
             <a href="#">Contact Us</a>
-            <a href="about.html">About Us</a>
         </div>
         <div class="foot2">
             <a href="#">&copy; 2022 | ClickIt</a>
