--- a/gallery.html
+++ b/gallery.html
@@ -9,46 +9,115 @@
     <title>ClickIt | Gallery</title>
 </head>
 <body>
-    <h1 class="header">Gallery</h1>
-    <div class="first-line">
-        <div class="first" id="first1">
-            <img src="Image/Nature1.jpeg" alt="" width="100%">
-            <h1>Sea City</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, unde.</p>
-            <input type="submit" value="Read More">
+    <header>
+        <nav>
+            <div class="logo">
+                <a href="index.html"><img src="image/logo.PNG" alt="Logo"></a>
+            </div>
+            <div class="navbar">
+                <ul>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="gallery.html">Gallery</a>
+                    <a href="signin.html">Sign In</a>
+                </ul>
+            </div>
+            <div class="search">
+                <input type="text" placeholder="Search here" id="search-bar">
+                <input type="submit" value="Search" id="search-btn">
+            </div>
+        </nav>
+    </header>
+    <main>
+        <h1 class="head">Gallery</h1>
+        <section class="land">
+        <h2>Landscapes</h2>
+        <div class="first-line">
+            <div class="first" id="first1">
+                <img src="image/land2.jpg" alt="">
+                <h3>Rivers never go Reverse</h3>
+            </div>
+            <div class="first" id="first2">
+                <img src="image/land1.jpg" alt="">
+                <h3>Pink City</h3>
+            </div>
+            <div class="first" id="first3">
+                <img src="image/land3.jpg" alt="">
+                <h3>Framing the Sun</h3>
+            </div>
         </div>
-        <div class="first" id="first2">
-            <img src="Image/Nature2.jpeg" alt="" width="100%">
-            <h1>Night View</h1>
-            <p>Placeat explicabo asperiores quia velit mollitia earum nisi sint.</p>
-            <input type="submit" value="Read More">
+        </section>
+        <section class="pot">
+            <h2>Portraits</h2>
+        <div class="second-line">
+            <div class="second" id="second1">
+                <img src="image/pot1.jpg" alt="">
+                <h3>Mountains</h3>
+            </div>
+            <div class="second" id="second2">
+                <img src="image/pot2.jpg" alt="">
+                <h3>Nature</h3>
+            </div>
+            <div class="second" id="second3">
+                <img src="image/pot3.jpg" alt="">
+                <h3>Evening Sky</h3>
+            </div>
+            <div class="second" id="second4">
+                <img src="image/pot4.jpg" alt="">
+                <h3>Village</h3>
+            </div>
         </div>
-        <div class="first" id="first3">
-            <img src="Image/Nature3.jpeg" alt="" width="100%">
-            <h1>Winter Snow</h1>
-            <p>Praesentium omnis illo eum nisi autem voluptas molestiae.</p>
-            <input type="submit" value="Read More">
+        </section>
+        <section class="sqr">
+            <h2>Places</h2>
+        <div class="third-line">
+            <div class="third" id="third1">
+                <img src="image/sqr1.jpg" alt="">
+                <h3>Sunset</h3>
+            </div>
+            <div class="third" id="third2">
+                <img src="image/sqr2.jpg" alt="">
+                <h3>Life</h3>
+            </div>
+            <div class="third" id="third3">
+                <img src="image/sqr3.jpg" alt="">
+                <h3>Forest</h3>
+            </div>
+            <div class="third" id="third4">
+                <img src="image/sqr4.jpg" alt="">
+                <h3>Rainy Day</h3>
+            </div>
         </div>
-    </div>
-    <div class="second-line">
-        <div class="second" id="second1">
-            <img src="Image/Nature4.jpeg" alt="" width="100%">
-            <h1>Night Sea</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-            <input type="submit" value="Read More">
+        </section>
+        <section class="ran">
+            <h2>Random Clicks</h2>
+        <div class="fourth-line">
+            <div class="fourth" id="fourth1">
+                <img src="image/ran1.jpg" alt="">
+            </div>
+            <div class="fourth" id="fourth2">
+                <img src="image/ran2.jpg" alt="">
+            </div>
+            <div class="fourth" id="fourth3">
+                <img src="image/ran3.jpg" alt="">
+            </div>
+            <div class="fourth" id="fourth4">
+                <img src="image/ran4.jpg" alt="">
+            </div>
         </div>
-        <div class="second" id="second2">
-            <img src="Image/Nature5.jpeg" alt="" width="100%">
-            <h1>Sea Mountain</h1>
-            <p>sit amet consectetur adipisicing elit. Fugit, deserunt?</p>
-            <input type="submit" value="Read More">
+        </section>
+    </main>
+    <footer>
+        <div class="foot">
+            <a href="#">FAQ</a>
+            <a href="#">Terms of Use</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Contact Us</a>
         </div>
-        <div class="second" id="second3">
-            <img src="Image/Nature6.jpeg" alt="" width="100%">
-            <h1>Sea Reflection</h1>
-            <p>Perspiciatis asperiores natus dignissimos labore ullam nihil.</p>
-            <input type="submit" value="Read More">
+        <div class="foot2">
+            <a href="#">&copy; 2022 | ClickIt</a>
+            <a href="">by mdrakesh24</a>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
