--- a/about.html
+++ b/about.html
@@ -8,37 +8,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/common.css">
     <title>ClickIt | About</title>
 </head>
 <body>
-<body>
     <header>
-        <nav>
-            <div class="logo">
-                <a href="index.html"><img src="image/logo.PNG" alt="Logo"></a>
-            </div>
-            <div class="navbar">
-                <ul>
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="gallery.html">Gallery</a>
-                    <a href="signin.html">Sign In</a>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg" style="background-color: lightblue;">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Click<span>It</span></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="./about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./gallery.html">Gallery</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Join
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./signin.html">Log in</a></li>
+                      <li><a class="dropdown-item" href="./signup.html">Sign up</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="./signup.html">Create a Account</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./index.html#contact">Contact Us</a>
+                  </li>
                 </ul>
+                <form class="d-flex" role="search" id="log">
+                  <button class="btn btn-outline-success"><a href="./signin.html">Log In</a></button>
+                  <button class="btn btn-outline-success"><a href="./signup.html">Sign Up</a></button>
+                </form>
+                </form>
+              </div>
             </div>
-            <div class="search">
-                <input type="text" placeholder="Search here" id="search-bar">
-                <input type="submit" value="Search" id="search-btn">
-            </div>
-        </nav>
+          </nav>
     </header>
     <main>
-        <div>
-            <h1>About Us</h1>
-        </div>
+        <h1>About Us</h1>
         <div>
             <div class="container">
+                <hr>
                 <div class="fst">
                     <div class="fstimg">
                         <img src="image/about1.jpg" alt="Certificate">
@@ -50,10 +80,9 @@
                         <h3>Excellence Awards</h3>
                         <br>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A fugiat voluptate itaque? Minus ea possimus at accusamus ratione ducimus sit enim aliquam quo, nisi, optio perspiciatis magni facere inventore veritatis.</p>
-                        <br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quaerat nisi molestiae fugit repellendus odit. Soluta nisi magnam nobis perferendis molestias id, dolorum doloribus aliquam quos nesciunt eum minima.</p>
                     </div>
                 </div>
+                <hr>
                 <div class="snd">
                     <div class="sndimg">
                         <img src="image/about2.jpeg" alt="National">
@@ -65,6 +94,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero repudiandae, ducimus repellendus blanditiis distinctio at praesentium enim. Odit, beatae veritatis reprehenderit fugiat itaque, blanditiis architecto quo non mollitia ex nostrum at corporis magnam labore eligendi tenetur.</p>
                     </div>
                 </div>
+                <hr>
                 <div class="trd">
                     <div class="trdimg">
                         <img src="image/about3.jpeg" alt="Trusted">
@@ -76,6 +106,7 @@
                         <p>Facere excepturi ex possimus numquam ea sequi placeat veniam ratione laudantium, eos praesentium soluta! Officia aspernatur magnam aut vero, dolores molestias minima nostrum sequi, vitae fugiat autem eum consequuntur.</p>
                     </div>
                 </div>
+                <hr>
                 <div class="frth">
                     <div class="frthimg">
                         <img src="image/about4.jpeg" alt="Gym-Trainer">
@@ -91,18 +122,21 @@
         </div>
     </main>
     <footer>
+        <div class="up-foot">
+            <div id="fb"><a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a></div>
+            <div id="ig"><a href="facebook.com"><i class="fa-brands fa-instagram"></i></a></div>
+            <div id="yt"><a href="facebook.com"><i class="fa-brands fa-youtube"></i></a></div>
+            <div id="tt"><a href="facebook.com"><i class="fa-brands fa-twitter"></i></a></div>
+        </div>
         <div class="foot">
             <a href="#">FAQ</a>
             <a href="#">Terms of Use</a>
             <a href="#">Privacy Policy</a>
-            <a href="#">Contact Us</a>
         </div>
         <div class="foot2">
-            <a href="#">&copy; 2022 | ClickIt</a>
-            <a href="">by mdrakesh24</a>
+            <a href="#">All rights Reserved &copy; 2022 | ClickIt</a>
         </div>
     </footer>
-</body>
-</html>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
