--- a/gallery.html
+++ b/gallery.html
@@ -8,119 +8,281 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="css/gallery.css">
+    <link rel="stylesheet" href="css/common.css">
     <title>ClickIt | Gallery</title>
 </head>
 <body>
     <header>
-        <nav>
-            <div class="logo">
-                <a href="index.html"><img src="image/logo.PNG" alt="Logo"></a>
-            </div>
-            <div class="navbar">
-                <ul>
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="gallery.html">Gallery</a>
-                    <a href="signin.html">Sign In</a>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg" style="background-color: lightblue;">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Click<span>It</span></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="./gallery.html">Gallery</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Join
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./signin.html">Log in</a></li>
+                      <li><a class="dropdown-item" href="./signup.html">Sign up</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="./signup.html">Create a Account</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./index.html#contact">Contact Us</a>
+                  </li>
                 </ul>
+                <form class="d-flex" role="search" id="log">
+                  <button class="btn btn-outline-success"><a href="./signin.html">Log In</a></button>
+                  <button class="btn btn-outline-success"><a href="./signup.html">Sign Up</a></button>
+                </form>
+              </div>
             </div>
-            <div class="search">
-                <input type="text" placeholder="Search here" id="search-bar">
-                <input type="submit" value="Search" id="search-btn">
-            </div>
-        </nav>
+          </nav>
     </header>
-    <main>
-        <h1 class="head">Gallery</h1>
+    
+    <h1 class="head">Gallery</h1>
+
+    <hr>
+
+    <main class="container">
         <section class="land">
-        <h2>Landscapes</h2>
-        <div class="first-line">
-            <div class="first" id="first1">
-                <img src="image/land2.jpg" alt="">
-                <h3>Rivers never go Reverse</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="image/land2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-body-secondary">Last updated 3 mins ago</small>
+                </div>
+              </div>
             </div>
-            <div class="first" id="first2">
-                <img src="image/land1.jpg" alt="">
-                <h3>Pink City</h3>
+            <div class="col">
+              <div class="card h-100">
+                <img src="image/land1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-body-secondary">Last updated 3 mins ago</small>
+                </div>
+              </div>
             </div>
-            <div class="first" id="first3">
-                <img src="image/land3.jpg" alt="">
-                <h3>Framing the Sun</h3>
+            <div class="col">
+              <div class="card h-100">
+                <img src="image/land3.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-body-secondary">Last updated 3 mins ago</small>
+                </div>
+              </div>
             </div>
-        </div>
+          </div>
         </section>
-        <section class="pot">
-            <h2>Portraits</h2>
-        <div class="second-line">
-            <div class="second" id="second1">
-                <img src="image/pot1.jpg" alt="">
-                <h3>Mountains</h3>
-            </div>
-            <div class="second" id="second2">
-                <img src="image/pot2.jpg" alt="">
-                <h3>Nature</h3>
-            </div>
-            <div class="second" id="second3">
-                <img src="image/pot3.jpg" alt="">
-                <h3>Evening Sky</h3>
-            </div>
-            <div class="second" id="second4">
-                <img src="image/pot4.jpg" alt="">
-                <h3>Village</h3>
-            </div>
-        </div>
+
+        <br>
+
+        <section class="port1">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-6">
+                    <img src="./image/pot1.jpg" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-6">
+                    <img src="./image/pot2.jpg" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </section>
+
+        <section class="port2">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-6">
+                    <img src="./image/pot3.jpg" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-6">
+                    <img src="./image/pot4.jpg" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+
+        <br>
+
         <section class="sqr">
-            <h2>Places</h2>
-        <div class="third-line">
-            <div class="third" id="third1">
-                <img src="image/sqr1.jpg" alt="">
-                <h3>Sunset</h3>
+            <div class="card">
+                <img src="./image/sqr1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
             </div>
-            <div class="third" id="third2">
-                <img src="image/sqr2.jpg" alt="">
-                <h3>Life</h3>
+            <div class="card">
+                <img src="./image/sqr2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
             </div>
-            <div class="third" id="third3">
-                <img src="image/sqr3.jpg" alt="">
-                <h3>Forest</h3>
+            <div class="card">
+                <img src="./image/sqr3.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
             </div>
-            <div class="third" id="third4">
-                <img src="image/sqr4.jpg" alt="">
-                <h3>Rainy Day</h3>
+            <div class="card">
+                <img src="./image/sqr4.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
             </div>
-        </div>
         </section>
-        <section class="ran">
-            <h2>Random Clicks</h2>
-        <div class="fourth-line">
-            <div class="fourth" id="fourth1">
-                <img src="image/ran1.jpg" alt="">
-            </div>
-            <div class="fourth" id="fourth2">
-                <img src="image/ran2.jpg" alt="">
-            </div>
-            <div class="fourth" id="fourth3">
-                <img src="image/ran3.jpg" alt="">
-            </div>
-            <div class="fourth" id="fourth4">
-                <img src="image/ran4.jpg" alt="">
-            </div>
-        </div>
+
+        <br>
+
+        <section class="port1">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-6">
+                    <img src="./image/ran1.jpg" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-6">
+                    <img src="./image/ran3.jpg" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+
+        <section class="port2">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-6">
+                    <img src="./image/ran2.jpg" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-6">
+                    <img src="./image/ran4.jpg" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </section>
     </main>
     <footer>
+        <div class="up-foot">
+            <div id="fb"><a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a></div>
+            <div id="ig"><a href="facebook.com"><i class="fa-brands fa-instagram"></i></a></div>
+            <div id="yt"><a href="facebook.com"><i class="fa-brands fa-youtube"></i></a></div>
+            <div id="tt"><a href="facebook.com"><i class="fa-brands fa-twitter"></i></a></div>
+        </div>
         <div class="foot">
             <a href="#">FAQ</a>
             <a href="#">Terms of Use</a>
             <a href="#">Privacy Policy</a>
-            <a href="#">Contact Us</a>
         </div>
         <div class="foot2">
-            <a href="#">&copy; 2022 | ClickIt</a>
-            <a href="">by mdrakesh24</a>
+            <a href="#">All rights Reserved &copy; 2022 | ClickIt</a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
