--- a/index.html
+++ b/index.html
@@ -8,106 +8,161 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/common.css">
     <title>ClickIt | Home</title>
 </head>
 <body>
+
     <header>
-        <nav>
-            <div class="logo">
-                <a href="index.html"><img src="image/logo.PNG" alt="Logo"></a>
-            </div>
-            <div class="navbar">
-                <ul>
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="gallery.html">Gallery</a>
-                    <a href="signin.html">Sign In</a>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg" style="background-color: lightblue;">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Click<span>It</span></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./gallery.html">Gallery</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Join
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./signin.html">Log in</a></li>
+                      <li><a class="dropdown-item" href="./signup.html">Sign up</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="./signup.html">Create an Account</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#contents">Contents</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact Us</a>
+                  </li>
                 </ul>
+                <form class="d-flex" role="search" id="log">
+                  <button class="btn btn-outline-success"><a href="./signin.html">Log In</a></button>
+                  <button class="btn btn-outline-success"><a href="./signup.html">Sign Up</a></button>
+                </form>
+              </div>
             </div>
-            <div class="search">
-                <input type="text" placeholder="Search here" id="search-bar">
-                <input type="submit" value="Search" id="search-btn">
-            </div>
-        </nav>
+          </nav>
     </header>
+
     <main>
-        <section class="container">
+        <section class="contain" id="home">
             <div class="left">
-                <h1>CAPTURE THE LIGHT</h1>
+                <h1><span id="st">Focus</span>. <span id="nd">Click</span>. <span id="rd">Inspire</span>.</h1>
                 <br>
                 <div class="subcon">
-                    <a href="signup.html">Sign Up</a>
-                    <a href="signup.html">Join Us</a>
+                  <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
                 </div>
+                <br>
+                <p>Embark on a visual journey through captivating moments frozen in time. Explore a world of emotions and stories captured through my lens</p>
             </div>
             <div class="right">
-                <div id="fb"><a href="https://facebook.com"><i class="fa-brands fa-facebook"></i> Facebook</a></div>
-                <div id="ig"><a href="facebook.com"><i class="fa-brands fa-instagram"></i> Instagram</a></div>
-                <div id="yt"><a href="facebook.com"><i class="fa-brands fa-youtube"></i> Youtube</a></div>
-                <div id="tt"><a href="facebook.com"><i class="fa-brands fa-twitter"></i> Twitter</a></div>
+                <img src="./image/home.png" alt="">
             </div>
         </section>
-        <section class="container2">
+
+        <section class="container2" id="contents">
             <h2>Contents</h2>
             <div class="first-line">
                 <div class="first" id="first1">
                     <div class="up">
                         <img src="./image/land1.jpg" alt="" >
                         <h3>Landscapes</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, unde.</p>
-                        <input type="submit" value="Explore More">
                     </div>
                     <div class="down">
                         <img src="./image/pot2.jpg" alt="" >
                         <h3>Nature</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, unde.</p>
-                        <input type="submit" value="Explore More">
                     </div>
                 </div>
                 <div class="first" id="first2">
                     <div class="up">
                         <img src="./image/sqr1.jpg" alt="">
                         <h3>Sunset</h3>
-                        <p>Placeat explicabo asperiores Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <input type="submit" value="Explore More">
                     </div>
                     <div class="down">
                         <img src="./image/pot3.jpg" alt="">
                         <h3>Evening Sky</h3>
-                        <p>Placeat explicabo asperiores quia velit mollitia earum nisi sint.</p>
-                        <input type="submit" value="Explore More">
                     </div>
                 </div>
                 <div class="first" id="first3">
                     <div class="up">
                         <img src="./image/pot1.jpg" alt="" >
                         <h3>Mountains</h3>
-                        <p>Praesentium omnis illo eum nisi autem voluptas molestiae.</p>
-                        <input type="submit" value="Explore More">
                     </div>
                     <div class="down">
                         <img src="./image/land2.jpg" alt="" >
                         <h3>River</h3>
-                        <p>Praesentium omnis illo eum nisi autem voluptas molestiae.</p>
-                        <input type="submit" value="Explore More">
                     </div>
                 </div>
             </div>
         </section>
+
+        <section class="contact" id="contact">
+          <h2>Contact Us</h2>
+          <br>
+          <form action="submit">
+              <p>Name: <br> <input type="text" name="name" placeholder="Enter your Name"></p>
+              <p>Email: <br> <input type="email" name="email" id="email" placeholder="yourname@gmail.com"></p>
+              <p>Subject: <br> <select name="subject" id="subject">
+                  <option value="">Choose your Subject</option>
+                  <option value="order">Order Issue</option>
+                  <option value="refund">Money not refunded</option>
+                  <option value="delivery">Delivery not attepmted</option>
+                  <option value="other">Other</option>
+                  </select>
+              </p>
+              <p>Massage: <br> <textarea name="message" id="message" placeholder="Your Message to Us"></textarea></p>
+              <p><input type="submit" value="Send"></p>
+          </form>
+      </section>
+
     </main>
+
+    <br>
+
     <footer>
+        <div class="up-foot">
+            <div id="fb"><a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a></div>
+            <div id="ig"><a href="facebook.com"><i class="fa-brands fa-instagram"></i></a></div>
+            <div id="yt"><a href="facebook.com"><i class="fa-brands fa-youtube"></i></a></div>
+            <div id="tt"><a href="facebook.com"><i class="fa-brands fa-twitter"></i></a></div>
+        </div>
         <div class="foot">
             <a href="#">FAQ</a>
             <a href="#">Terms of Use</a>
             <a href="#">Privacy Policy</a>
-            <a href="#">Contact Us</a>
         </div>
         <div class="foot2">
-            <a href="#">&copy; 2022 | ClickIt</a>
-            <a href="">by mdrakesh24</a>
+            <a href="#">All rights Reserved &copy; 2022 | ClickIt</a>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
