--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   </form>
                 </div>
                 <br>
-                <p>Embark on a visual journey through captivating moments frozen in time. Explore a world of emotions and stories captured through my lens</p>
+                <p>Embark on a visual journey through captivating moments frozen in time. Explore a world of emotions and stories captured through my lens.</p>
             </div>
             <div class="right">
                 <img src="./image/home.png" alt="">
