--- a/signup.html
+++ b/signup.html
@@ -85,7 +85,7 @@
         </form>
         </div>
         <div class="right">
-          <img src="./image/login.png" alt="">
+          <img src="./image/signup.png" alt="">
         </div>
       </div>
     </div>
