--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg" style="background-color: lightblue;">
+        <nav class="navbar navbar-expand-lg" style="background-color: white;">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Click<span>It</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +52,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./index.html#contact">Contact Us</a>
+                    <a class="nav-link" href="./contact.html">Contact Us</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search" id="log">
@@ -122,21 +122,26 @@
         </div>
     </main>
     <footer>
-        <div class="up-foot">
-            <div id="fb"><a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a></div>
-            <div id="ig"><a href="facebook.com"><i class="fa-brands fa-instagram"></i></a></div>
-            <div id="yt"><a href="facebook.com"><i class="fa-brands fa-youtube"></i></a></div>
-            <div id="tt"><a href="facebook.com"><i class="fa-brands fa-twitter"></i></a></div>
-        </div>
+      <h3 class="text-light">Follow us on</h3>
+      <div class="up-foot">
+        <div id="fb"><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></div>
+        <div id="ig"><a href="facebook.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
+        <div id="yt"><a href="facebook.com" target="_blank"><i class="fa-brands fa-youtube"></i></a></div>
+        <div id="tt"><a href="facebook.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></div>
+      </div>
+      <div class="down-foot">
         <div class="foot">
-            <a href="#">FAQ</a>
-            <a href="#">Terms of Use</a>
-            <a href="#">Privacy Policy</a>
+          <a href="#">FAQ</a>
+          <a href="#">Terms of Use</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">About</a>
+          <a href="#">Contact Us</a>
         </div>
         <div class="foot2">
-            <a href="#">All rights Reserved &copy; 2022 | ClickIt</a>
+          <a href="#">All rights Reserved &copy; 2022 | ClickIt</a>
         </div>
-    </footer>
+      </div>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
