--- a/signup.html
+++ b/signup.html
@@ -16,14 +16,14 @@
     <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="css/signin.css">
+    <link rel="stylesheet" href="css/signup.css">
     <link rel="stylesheet" href="css/common.css">
     <title>ClickIt | Sign In</title>
 </head>
 <body>
     <header>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg" style="background-color: lightblue;">
+        <nav class="navbar navbar-expand-lg" style="background-color: white;">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Click<span>It</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +52,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./index.html#contact">Contact Us</a>
+                    <a class="nav-link" href="./contact.html">Contact Us</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search" id="log">
@@ -65,48 +65,51 @@
     </header>
 
     <main>
-    <div class="contain">
-      <div class="content">
-        <div class="left">
-          <h2>Sign Up to ClickIt</h2>
-          <form method="get" action="">
-            <p>Name <br><input type="email" name="email" id="email" placeholder="Your name"></p>
-            <p>Email <br><input type="email" name="email" id="email" placeholder="yourname@gmail.com"></p>
-            <p>Password <br><input type="password" name="password" id="password" placeholder="*******"></p>
-            <div class="btn">
-            <p>
-                <input type="submit" value="Sign Up" >
-            </p>
-            </div>
-            <div class="google"><button><i class="fa-brands fa-google"></i> Sign Up Using Google</button>
-            </div>
-            <div class="facebook"><button><i class="fa-brands fa-facebook"></i> Sign Up Using Facebook</button>
-            </div>
-        </form>
-        </div>
-        <div class="right">
-          <img src="./image/signup.png" alt="">
+      <div class="contain">
+        <h2>Enter Details to Sign Up</h2>
+        <div class="content">
+          <div class="left">
+            <form method="get" action="">
+              <p>Name <input type="text" name="name" id="name" placeholder="Your Name"></p>
+              <p>Email<input type="email" name="email" id="email" placeholder="yourname@gmail.com"></p>
+              <p>Password<input type="password" name="password" id="password" placeholder="*******"></p>
+              <div class="btn">
+              <p>
+                  <input type="submit" value="Sign Up" >
+              </p>
+              </div>
+              
+          </form>
+          </div>
+          <div class="right">
+            <img src="./image/signup.png" alt="">
+          </div>
         </div>
       </div>
-    </div>
-    </main>
+      </main>
 
-    <footer>
-      <div class="up-foot">
-          <div id="fb"><a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a></div>
-          <div id="ig"><a href="facebook.com"><i class="fa-brands fa-instagram"></i></a></div>
-          <div id="yt"><a href="facebook.com"><i class="fa-brands fa-youtube"></i></a></div>
-          <div id="tt"><a href="facebook.com"><i class="fa-brands fa-twitter"></i></a></div>
-      </div>
-      <div class="foot">
-          <a href="#">FAQ</a>
-          <a href="#">Terms of Use</a>
-          <a href="#">Privacy Policy</a>
-      </div>
-      <div class="foot2">
-          <a href="#">All rights Reserved &copy; 2022 | ClickIt</a>
-      </div>
-  </footer>
+      <footer>
+        <h3 class="text-light">Follow us on</h3>
+        <div class="up-foot">
+          <div id="fb"><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></div>
+          <div id="ig"><a href="facebook.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
+          <div id="yt"><a href="facebook.com" target="_blank"><i class="fa-brands fa-youtube"></i></a></div>
+          <div id="tt"><a href="facebook.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></div>
+        </div>
+        <div class="down-foot">
+          <div class="foot">
+            <a href="#">FAQ</a>
+            <a href="#">Terms of Use</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">About</a>
+            <a href="#">Contact Us</a>
+          </div>
+          <div class="foot2">
+            <a href="#">All rights Reserved &copy; 2022 | ClickIt</a>
+          </div>
+        </div>
+    </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
